--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -6,12 +6,234 @@ block variables
 	- var bodyclass = 'home'
 
 block body
-	section.home
+	section.home-slider
+		.containner
+			.row
+				.col
+					h1
+						|Hi there! We are the new kids on the block
+						br
+						|and we build awesome websites and mobile apps.
+					p
+						a.btn.btn-more(href="#") WORK WITH US!
+	section.home-service
 		.container
 			.row
 				.col
-					.jumbotron.text-center.mt-4
-						h1.hidden-md-up.display-4 Awesome Bootstrap Sites!
-						h2.hidden-md-up Dễ dàng triển khai và sử dụng
-						p.lead Bộ công cụ phát triển web vô cùng mạnh mẽ dựa trên nền tảng Bootstrap.
-
+					h2 SERVICES WE PROVIDE
+					p
+						|We are working with both individuals and businesses from all over the globe
+						br
+						|to create awesome websites and applications.
+			.row
+				.col-sm-6.col-md-3
+					img(src="./img/home_icon_1.png", alt="")
+					h3 BRANDING
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+				.col-sm-6.col-md-3
+					img(src="./img/home_icon_2.png", alt="")
+					h3 DESIGN
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+				.col-sm-6.col-md-3
+					img(src="./img/home_icon_3.png", alt="")
+					h3 DEVELOPMENT
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+				.col-sm-6.col-md-3
+					img(src="./img/home_icon_4.png", alt="")
+					h3 ROCKET SCIENCE
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+	section.home-team
+		.container
+			.row
+				.col
+					h2 MEET OUR BEAUTIFUL TEAM
+					p We are a small team of designers and developers, who help brands with big ideas.
+			.row
+				.col-sm-6.col-md-3
+					img.img-fluid(src="./img/home_image_1.png", alt="")
+					h3 ANNE HATHAWAY
+					p
+						a(href="#") CEO / Marketing Guru
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+					ul.list-inline
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-facebook
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-google
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-twitter
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-instagram
+				.col-sm-6.col-md-3
+					img.img-fluid(src="./img/home_image_1.png", alt="")
+					h3 KATE UPTON
+					p
+						a(href="#") Creative Director
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+					ul.list-inline
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-facebook
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-google
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-twitter
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-instagram
+				.col-sm-6.col-md-3
+					img.img-fluid(src="./img/home_image_1.png", alt="")
+					h3 OLIVIA WILDE
+					p
+						a(href="#") Lead Designer
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+					ul.list-inline
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-facebook
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-google
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-twitter
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-instagram
+				.col-sm-6.col-md-3
+					img.img-fluid(src="./img/home_image_1.png", alt="")
+					h3 ASHLEY GREENE
+					p
+						a(href="#") SEO / Developer
+					p Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae, rem.
+					ul.list-inline
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-facebook
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-google
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-twitter
+						li.list-inline-item
+							a(href="#")
+								i.fa.fa-instagram
+	section.home-skill
+		.container
+			.row
+				.col
+					h2 WE GOT SKILLS!
+					p
+						|We are working with both individuals and businesses from all over the globe
+						br
+						|to create awesome websites and applications.
+			.row
+				.col-sm-6.col-md-3
+					img(src="./img/home_skill_1.png", alt="")
+					h3 WEB DESIGN
+				.col-sm-6.col-md-3
+					img(src="./img/home_skill_2.png", alt="")
+					h3 HTML / CSS
+				.col-sm-6.col-md-3
+					img(src="./img/home_skill_3.png", alt="")
+					h3 GRAPHIC DESIGN
+				.col-sm-6.col-md-3
+					img(src="./img/home_skill_4.png", alt="")
+					h3 UI / UX
+	section.home-portfolio
+		.container
+			.row
+				.col
+					h2 WE GOT SKILLS!
+					p
+						|We are working with both individuals and businesses from all over the globe
+						br
+						|to create awesome websites and applications.
+			.row
+				.col
+					span
+						a.btn.btn-more(href="#") ICONS
+					span
+						a.btn.btn-more(href="#") APPS
+					span
+						a.btn.btn-more(href="#") WEB
+					span
+						a.btn.btn-more(href="#") ALL
+			.row
+				.col-md-6.mt-5
+					img.img-fluid(src="./img/home_product_1.png", alt="")
+					h3 ISOMETRIC PERSPECTIVE MOCK-UP
+				.col-md-6.mt-5
+					img.img-fluid(src="./img/home_product_2.png", alt="")
+					h3 TIME ZONE APP UI
+				.col-md-6.mt-5
+					img.img-fluid(src="./img/home_product_3.png", alt="")
+					h3 VIRO MEDIA PLAYER UI
+				.col-md-6.mt-5
+					img.img-fluid(src="./img/home_product_4.png", alt="")
+					h3 BLOG / MAGAZINE FLAT UI KIT
+			.row
+				.col
+					p
+						a.btn.btn-more(href="#") LOAD MORE PROJECT
+	section.home-about-us
+		.container
+			.row
+				.col
+					h2 WE GOT ABOUT US!
+					p Lorem ipsum dolor sit amet.
+			.row
+				.col-md-6.mt-5
+					.row
+						.col-md-3
+							img.img-fluid(src="./img/home_image_1.png", alt="")
+						.col-md-9
+							p.text "Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque."
+							h5.text CHANEL IMAN
+							p.text CEO of Pinterest
+				.col-md-6.mt-5
+					.row
+						.col-md-3
+							img.img-fluid(src="./img/home_image_1.png", alt="")
+						.col-md-9
+							p.text "Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque."
+							h5.text CHANEL IMAN
+							p.text CEO of Pinterest
+				.col-md-6.mt-5
+					.row
+						.col-md-3
+							img.img-fluid(src="./img/home_image_1.png", alt="")
+						.col-md-9
+							p.text "Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque."
+							h5.text CHANEL IMAN
+							p.text CEO of Pinterest
+				.col-md-6.mt-5
+					.row
+						.col-md-3
+							img.img-fluid(src="./img/home_image_1.png", alt="")
+						.col-md-9
+							p.text "Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque."
+							h5.text CHANEL IMAN
+							p.text CEO of Pinterest
+	section.home-form
+		.container.home-form_width
+			.row
+				.col
+					h2 Lorem isum dolor.
+					p Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+			.form-group.row.mt-5.mb-0.mb-sm-2
+				.col-sm-6.mb-3
+					input.form-control(type="text" placeholder="User")
+				.col-sm-6.mb-3
+					input.form-control(type="text" placeholder="Pass")
+			.form-group.row
+				.col
+					textarea.form-control(name="", cols="30", rows="4", placeholder="Comment")
+	
