--- a/src/styles/_partials/_footer.sass
+++ b/src/styles/_partials/_footer.sass
@@ -1,3 +1,25 @@
 footer
-	img 
-		max-width: 200px
+	background: darken(#2c3e50,7%)
+	padding: 2rem 0
+	ul
+		li.list-group-item
+			background: none
+			border: 0
+			text-align: center
+			a
+				&:hover
+					color: white
+					text-decoration: none
+	+media-breakpoint-up(sm)
+		ul.list-group
+			flex-wrap: wrap
+			flex-direction: initial
+			li.list-group-item
+				flex: 0 0 50%
+				max-width: 50%
+	+media-breakpoint-up(md)
+		ul.list-group
+			justify-content: center
+			li.list-group-item
+				flex: initial
+				max-width: initial
