--- a/src/templates/_layout/header.pug
+++ b/src/templates/_layout/header.pug
@@ -1,23 +1,18 @@
 <!-- ////////////// HEADER ////////////// -->
-header.bg-light
+header
 	.container
-		nav.navbar.navbar-expand-lg.navbar-light
-			a.navbar-brand(href="#") 
-				img(src="./img/logo.png", alt="Logo")
-			button.navbar-toggler(type="button" data-toggle="collapse" data-target="#fullStackMenu" aria-controls="fullStackMenu" aria-expanded="false" aria-label="Toggle navigation")
-				span.fa.fa-bars
-			#fullStackMenu.collapse.navbar-collapse
-				ul.navbar-nav.mr-auto
-					li.nav-item.active
-						a.nav-link(href="index.html")
-							| Trang chủ
-					li.nav-item
-						a.nav-link(href="about.html") Về chúng tôi
-					li.nav-item.dropdown
-						a#dropdownFS.nav-link.dropdown-toggle(href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Gian hàng
-						.dropdown-menu(aria-labelledby="dropdownFS")
-							a.dropdown-item(href="#") Nam
-							a.dropdown-item(href="#") Nữ
-				form.form-inline.my-2.my-md-0
-					input.form-control(type="text" placeholder="Tìm kiếm" aria-label="Tìm kiếm")
+		.row
+			.col
+				img(src="./img/logo.png", alt="")
+				ul
+					li
+						a(href="#") HOME
+					li
+						a(href="#") ABOUT
+					li
+						a(href="#") WORK
+					li
+						a(href="#") BLOG
+					li
+						a(href="#") CONTACT
 <!-- ////////////// HEADER ////////////// -->
